# rs_cmake_stm32

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  Dockerfile.arm_toolchain  devcontainer.json
.github/workflows/: make_release.yml  test_fw.yml
src/: CMakeLists.txt  STM32H7S3xx_FLASH.ld  STM32L4S5ZITx_FLASH.ld  main.c
src/cm4_handlers/: cm4_handlers.c  cm4_handlers.h
src/hw_config/: CMakeLists.txt
src/hw_config/include/: board.h
src/peripherals/: CMakeLists.txt
src/peripherals/crc/: CMakeLists.txt  crc.c
src/peripherals/crc/include/: crc.h
src/peripherals/crc/mock/: CMakeLists.txt  mock_crc.cpp  mock_crc.h
src/peripherals/delay/: CMakeLists.txt  delay.c
src/peripherals/delay/include/: delay.h
src/peripherals/delay/mock/: CMakeLists.txt  mock_delay.cpp  mock_delay.h
src/peripherals/dma/: CMakeLists.txt  dma.c
src/peripherals/dma/include/: dma.h
src/peripherals/dma/mock/: CMakeLists.txt  mock_dma.cpp  mock_dma.h
src/peripherals/flash/: CMakeLists.txt  flash.c
src/peripherals/flash/include/: flash.h
src/peripherals/flash/mock/: CMakeLists.txt  mock_flash.cpp  mock_flash.h
src/peripherals/fmc/: CMakeLists.txt  fmc.c
src/peripherals/fmc/include/: fmc.h
src/peripherals/fmc/mock/: CMakeLists.txt  mock_fmc.cpp  mock_fmc.h
src/peripherals/gpio/: CMakeLists.txt  gpio.c
src/peripherals/gpio/include/: gpio.h
src/peripherals/gpio/mock/: CMakeLists.txt  mock_gpio.cpp  mock_gpio.h
src/peripherals/i2c/: CMakeLists.txt  i2c.c
src/peripherals/i2c/include/: i2c.h
src/peripherals/i2c/mock/: CMakeLists.txt  mock_i2c.cpp  mock_i2c.h
src/peripherals/spi/: CMakeLists.txt  spi.c
src/peripherals/spi/include/: spi.h
src/peripherals/spi/mock/: CMakeLists.txt  mock_spi.cpp  mock_spi.h
src/peripherals/timer/: CMakeLists.txt  timer.c
src/peripherals/timer/include/: timer.h
src/peripherals/timer/mock/: CMakeLists.txt  mock_timer.cpp  mock_timer.h
src/peripherals/usart/: CMakeLists.txt  usart.c
src/peripherals/usart/include/: usart.h
src/peripherals/usart/mock/: CMakeLists.txt  mock_usart.cpp  mock_usart.h
src/peripherals/watchdog/: CMakeLists.txt  watchdog.c
src/peripherals/watchdog/include/: watchdog.h
src/peripherals/watchdog/mock/: CMakeLists.txt  mock_watchdog.cpp  mock_watchdog.h
src/stm32_hal_conf/: CMakeLists.txt  system_stm32h7rsxx.c  system_stm32h7xx.c  system_stm32l4xx.c
src/stm32_hal_conf/include/: stm32h7xx_hal_conf.h  stm32l4xx_hal_conf.h
src/util/: CMakeLists.txt
src/util/include/: app_assert.h  debug_logging.h  types.h
src/util/src/: app_assert.c  debug_logging.c
